# robot_control

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py
ci/: prepare-jenkins-slave.sh  source_env.sh
control_barrier_functions/: CMakeLists.txt  package.xml  playground.py  setup.py
control_barrier_functions/src/control_barrier_functions/: functions.py  simulation.py  solver.py
robot_control/: CMakeLists.txt  README.md  config.rviz  package.xml  setup.py
robot_control/assets/arms/kinova3/: kinova3_ros.urdf
robot_control/assets/bases/smb/: smb.urdf
robot_control/assets/grippers/robotiq_85_2f/meshes/visual/: robotiq_85_finger_tip_link.dae
robot_control/assets/objects/hinged_door/meshes/: frame.dae
robot_control/assets/objects/valve/meshes/: log.txt
robot_control/bindings/: robot_control.cc
robot_control/include/robot_control/: typedefs.h
robot_control/include/robot_control/controllers/: task_space_controller.h
robot_control/include/robot_control/controllers/end_effector_controllers/: ik_controller.h  impedance_controller.h  kdl_cartesian_velocity_controller.h  kdl_ik_ns_controller.h  task_space_controller.h
robot_control/include/robot_control/math/: math.h
robot_control/include/robot_control/modeling/: robot_wrapper.h
robot_control/include/robot_control/optimization/: ik_base.h  ik_kdl.h
robot_control/include/robot_control/utils/: momentum_observer.h  timer.h  trajectory_generator.h  velocity_profile_atrap.h
robot_control/launch/: cartesian_velocity.test  ik.test  ik_debug.launch
robot_control/scripts/: test_motion_force_controller.py  test_op_space_controller.py  test_rc_task_space_controller.py  test_task_space_controller.py
robot_control/src/: robot_control.cc  robot_wrapper.cc
robot_control/src/controllers/end_effector_controllers/: ik_controller.cpp  impedance_controller.cpp  kdl_cartesian_velocity_controller.cc  kdl_ik_ns_controller.cpp  task_space_controller.cc
robot_control/src/math/: math.cpp
robot_control/src/modeling/: robot_wrapper.cc
robot_control/src/nodes/: ik_debug.cc
robot_control/src/optimization/: ik_kdl.cpp
robot_control/src/robot_control/controllers/: __init__.py  robot_controller_base.py
robot_control/src/robot_control/controllers/implementation/: __init__.py  motion_force_controller_ros.py
robot_control/src/robot_control/modeling/: __init__.py  robot_wrapper.py  robot_wrapper_ros.py
robot_control/src/robot_control/simulation/: __init__.py  pybullet_readings.py  pybullet_robot_wrapper.py
robot_control/src/robot_control/simulation/sensors/: pybullet_contact_wrench.py
robot_control/src/utils/: momentum_observer.cc  timer.cc  trajectory_generator.cc  velocity_profile_atrap.cpp
robot_control/test/misc/: test_pinocchio_object.py
robot_control/unittest/controllers/end_effector_controllers/: test_kdl_cartesian_velocity_controller.cc  test_kdl_ik_ns_controller.cpp  test_rc_task_space_controller.py
robot_control/unittest/math/: math.cpp
robot_control/unittest/modeling/: test_robot_wrapper.cpp  test_robot_wrapper.py
robot_control/unittest/utils/: test_trajectyory_generator.cpp
robot_control_assets/: CMakeLists.txt  package.xml  setup.py
robot_control_assets/assets/arms/kinova3/: kinova3.urdf  kinova3.urdf.xacro
robot_control_assets/assets/arms/panda/: panda.urdf  panda.urdf.xacro  panda.urdf_model.xacro
robot_control_assets/assets/arms/three_revolute_planar/: three_revolute_planar.urdf
robot_control_assets/assets/composite/kinova3_gripper/meshes/collision/: robotiq_85_finger_link.stl
robot_control_assets/assets/composite/kinova3_gripper/meshes/visual/: robotiq_85_base_link.dae
robot_control_assets/assets/composite/swaco/: swaco.urdf
robot_control_assets/assets/grippers/robotiq_85_2f/: robotiq_85_2f_standalone.urdf
robot_control_assets/assets/grippers/robotiq_85_2f/meshes/collision/: robotiq_85_finger_tip_link.stl
robot_control_assets/assets/grippers/robotiq_85_2f/meshes/visual/: robotiq_85_knuckle_link.dae
robot_control_assets/assets/objects/door_handle/meshes/: door_handle.dae  handle.dae
robot_control_assets/assets/objects/hinged_door/: model.sdf
robot_control_assets/assets/objects/hinged_door/meshes/: door.dae
robot_control_assets/assets/objects/valve/: mesheslog.txt  model.sdf  valve.urdf  valve.urdf.xacro
robot_control_assets/assets/objects/valve/meshes/: valve.stl
robot_control_assets/launch/: debug.launch  load_object.launch
robot_control_assets/rviz/: cfg.rviz
robot_control_assets/src/robot_control_assets/: __init__.py  assets.py
robot_control_bullet/: CMakeLists.txt  package.xml  setup.py
robot_control_bullet/src/robot_control_bullet/simulation/: __init__.py  pybullet_command.py  pybullet_readings.py  pybullet_robot_wrapper.py  pybullet_simulation_base.py  pybullet_utilities.py
robot_control_bullet/src/robot_control_bullet/simulation/sensors/: __init__.py
robot_control_bullet/test/simulation/: test_pybullet_robot_wrapper.py
robot_control_bullet/test/simulation/sensors/: test_contact_wrench.py  test_depth_image.py  test_depth_image.test
robot_control_ros/: CMakeLists.txt  package.xml  plugin.xml  plugins.xml
robot_control_ros/config/: cfg.rviz  gazebo_ros_control.yml  rqt_multiplot_wrench.xml
robot_control_ros/include/robot_control_ros/: controller_base.h  ik_controller.h  impedance_controller.h  impedance_motion_controller.h  task_space_controller.h  task_space_controller_sim.h  wrench_estimator.h
robot_control_ros/include/robot_control_ros/impl/: ik_controller_impl.h  impedance_motion_controller_impl.h
robot_control_ros/launch/: gazebo.launch  gui.launch  load_controllers.launch  load_test.launch  operator_pc.launch  test_controller.launch
robot_control_ros/params/: controllers.yaml
robot_control_ros/rviz/: config.rviz
robot_control_ros/scripts/: interactive_marker.py  unpause_gazebo.py
robot_control_ros/src/: controller_base.cc  ik_controller.cc  impedance_controller.cc  impedance_motion_controller.cc  load_test.cpp  task_space_controller.cc  task_space_controller_sim.cc  wrench_estimator.cc
(+82 files in other folders)
