<?xml version="1.0"?>
<package format="2">
    <name>control_barrier_functions</name>
    <version>0.1.0</version>
    <description>control_barrier_functions</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
