<?xml version="1.0"?>
<package format="2">
  <name>robot_control</name>
  <version>0.1.0</version>
  <description>robot_control package</description>
  <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pybind11_catkin</depend>
  <depend>pinocchio</depend>
  <depend>eigen</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>angles</depend>
  <depend>joint_limits_interface</depend>
  <depend>urdf</depend>
</package>

