<?xml version="1.0"?>
<package format="2">
  <name>robot_control_bullet</name>
  <version>0.0.1</version>
  <description>robot_control_bullet package</description>
  <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>

